no method error in stories/show/ 12th line

--- a/app/views/stories/_story.html.erb
+++ b/app/views/stories/_story.html.erb
@@ -19,4 +19,10 @@
     <%= story.is_public %>
   </p>
 
+
+  <% story.chapters.each do |chapter| %>
+      <%= render "stories/chapter", chapter: chapter %>
+  <% end %>
+
+
 </div>
