refactored seed, dropped db which caused error in set story id not found

--- a/app/views/stories/_chapter.html.erb
+++ b/app/views/stories/_chapter.html.erb
@@ -4,19 +4,16 @@
     <%= chapter.title %>
   </p>
 
-  <p>
-    <strong>Chapter body:</strong>
-    <%= chapter.chapter_body %>
-  </p>
+  <%# <p> %>
+    <%# <strong>Chapter body:</strong> %>
+    <%# chapter.chapter_body %>
+  <%# </p> %>
 
-  <p>
-    <strong>Place:</strong>
-    <%= chapter.place %>
-  </p>
+  <%# chapter.place %>
 
-  <p>
-    <strong>Is public:</strong>
-    <%= chapter.is_public %>
-  </p>
+  <%# <p>
+    <strong>Is public:</strong> %>
+    <%# chapter.is_public %>
+  <%# </p> %>
 
 </div>
