--- a/app/views/stories/_story.html.erb
+++ b/app/views/stories/_story.html.erb
@@ -14,10 +14,10 @@
     <%= story.annotation %>
   </p>
 
-  <p>
-    <strong>Is public:</strong>
-    <%= story.is_public %>
-  </p>
+  <%# <p> %>
+    <%# <strong>Is public:</strong> %>
+    <%# story.is_public %>
+  <%# </p> %>
 
 
 
