--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div>
     <%= form.label :cover, style: "display: block" %>
-    <%= form.text_field :cover %>
+    <%= form.file_field :cover %>
   </div>
 
   <div>
