img uploader added for stories and user uploads

--- a/app/views/stories/_story.html.erb
+++ b/app/views/stories/_story.html.erb
@@ -1,6 +1,6 @@
 <div id="<%= dom_id story %>">
 
-  <%= image_tag story.cover.url, width: 600 %>
+  <%= image_tag story.cover.url, width: 700, height: 304 %>
   <p>
     <strong>Title:</strong>
     <%= story.title %>
