menu helper plus stylesheets templ

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,11 @@
   </head>
 
   <body>
+  <%# сюда прыгает рендер менюшки %>
+
+    <%= render "application/menubar" %>
+
     <%= yield %>
+
   </body>
 </html>
