--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,10 @@
 
     <%= render "application/menubar" %>
 
+    <%# подключим аутентиф здесь чтобы рендерилос везде %>
+
+
+
     <%= yield %>
 
   </body>
