--- a/app/views/stories/_story.html.erb
+++ b/app/views/stories/_story.html.erb
@@ -1,24 +1,29 @@
-<div id="<%= dom_id story %>">
-
-  <%= image_tag story.cover.url, width: 700, height: 304 %>
-  <p>
-    <strong>Title:</strong>
-    <%= story.title %>
-  </p>
+<div id="<%= dom_id story %>" class="M_StoryCard">
 
 
+  <div class="M_Story">
+    <div class="A_StoryContent">
+      <p class="Q_Name">
+        <%= story.title %>
+      </p>
 
-  <p>
-    <strong>Annotation:</strong>
-    <%= story.annotation %>
-  </p>
+      <p class="Q_Anno">
+        <%= story.annotation %>
+      </p>
+    </div> 
 
+    <div class="A_StoryImg">
+        <%= image_tag story.cover.url %>
+    </div>
+  </div>
+
+
+  <div class="A_Button" style="margin: 0 30px 20px;">
+    <%= link_to "Читать историю", story %>
+  </div>
   <%# <p> %>
     <%# <strong>Is public:</strong> %>
     <%# story.is_public %>
   <%# </p> %>
-
-
-
 
 </div>
