added styles for chapters,stories and buttons

--- a/app/assets/stylesheets/basics.css
+++ b/app/assets/stylesheets/basics.css
@@ -27,5 +27,9 @@ h1 {
     display: block;
     border-radius: 15px;
     background-color: #FFA07D;
-    color: white;
+    color: black;
+}
+
+img {
+   object-fit: cover;
 }
