--- a/app/assets/stylesheets/atoms.css
+++ b/app/assets/stylesheets/atoms.css
@@ -1,4 +1,4 @@
-.A_StoryContent {
+.A_StoryContent, .A_Chaptercontent {
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -11,4 +11,10 @@
     height: 304px;
     border-radius: 30px;
     overflow: hidden;
+
+    img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+     }
 }
