--- a/app/assets/stylesheets/molecules.css
+++ b/app/assets/stylesheets/molecules.css
@@ -7,6 +7,14 @@
 
 }
 
+.M_StoryCard_Admin {
+    display: flex;
+    flex-direction: column;
+    background-color: grey;
+    border-radius: 40px;
+    margin-bottom: 30px;   
+}
+
 .M_Story {
     display: flex;
     flex-direction: row;
