--- a/app/views/application/_menubar.html.erb
+++ b/app/views/application/_menubar.html.erb
@@ -1,8 +1,14 @@
 <nav class= "M_Menubar">
     <div class="A_MainLinks">
         <%= link_to "Главная", root_path %>
-        <%= link_to "Истории", stories_url %>
+
+        <% if user_signed_in? && current_user.admin? %>
+             <%= link_to "Модерировать истории", admin_stories_url %>
+        <%else%>
+             <%= link_to "Истории", stories_url %>
+        <%end%>
         <%= link_to "Все главы", chapters_path%>
+
         <%= link_to "Промо" %>
     </div>
     
