problem w create chapter from index/chapters cause story must exist+added admin part 1

--- a/app/assets/stylesheets/basics.css
+++ b/app/assets/stylesheets/basics.css
@@ -26,7 +26,7 @@ h1 {
     align-content: center;
     display: block;
     border-radius: 15px;
-    background-color: #FFA07D;
+    background-color: darkgray;
     color: black;
 }
 
