--- a/app/views/admin/stories/_story.html.erb
+++ b/app/views/admin/stories/_story.html.erb
@@ -19,7 +19,7 @@
 
 
   <div class="A_Button" style="margin: 0 30px 20px;">
-    <%= link_to "Читать историю", story %>
+    <%= link_to "Читать историю", admin_story_path(story) %>
   </div>
   <%# <p> %>
     <%# <strong>Is public:</strong> %>
