--- a/app/views/admin/stories/index.html.erb
+++ b/app/views/admin/stories/index.html.erb
@@ -4,9 +4,9 @@
 
 <h1>Модерировать все истории</h1>
 
-<div class="A_Button">
-  <%= link_to "Создать новую историю", new_story_path %>
-</div>
+<%# <div class="A_Button"> %>
+  <%#= link_to "Создать новую историю", new_admin_story_path %>
+<%# </div> %>
 
 
 
