--- a/app/views/admin/stories/edit.html.erb
+++ b/app/views/admin/stories/edit.html.erb
@@ -8,5 +8,5 @@
 
 <div>
   <%= link_to "Show this story", @story %> |
-  <%= link_to "Back to stories", stories_path %>
+  <%= link_to "Back to stories", admin_stories_path %>
 </div>
