--- a/app/views/admin/stories/show.html.erb
+++ b/app/views/admin/stories/show.html.erb
@@ -5,13 +5,13 @@
 
 <div class="M_StoryEditB">
   <div class="A_Button">
-    <%= link_to "Edit this story", edit_story_path(@story) %> 
+    <%= link_to "Изменить историю", edit_admin_story_path(@story) %> 
   </div>
   <div class="A_Button">
-      <%= button_to "Удалить историю", @story, method: :delete %>
+      <%= button_to "Удалить историю", admin_story_path(@story), method: :delete %>
   </div>
   <div class="A_Button">
-      <%= link_to "Ко всем историям", stories_path %>
+      <%= link_to "Ко всем историям", admin_stories_path %>
   </div>
 
 </div>
@@ -20,7 +20,7 @@
 <h1>Главы</h1>
 
 <div class="A_Button" style="margin-left: 0;">
-  <%= link_to "Добавить главу", new_chapter_path(story_id: @story.id) %>
+  <%#= link_to "Добавить главу", new_admin_chapter_path(story_id: @story.id) %>
 </div>
 
 
