--- a/app/views/admin/stories/_story.html.erb
+++ b/app/views/admin/stories/_story.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id story %>" class="M_StoryCard_Admin">
+<div id="<%= dom_id story %>" class="M_StoryCard">
 
 
   <div class="M_Story">
