--- a/app/views/welcome/_menubar.html.erb
+++ b/app/views/welcome/_menubar.html.erb
@@ -1,4 +1,4 @@
-<nav class= "M_Menubar">
+<nav class= "M_Menubar_Promo">
     <%= image_tag("logo.svg", alt: "Картинка логотипа") %>
     <div class="A_MainLinks">
 
