--- a/app/views/admin/stories/edit.html.erb
+++ b/app/views/admin/stories/edit.html.erb
@@ -7,6 +7,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this story", @story %> |
+  <%= link_to "Show this story", admin_user_story_path(@story) %> |
   <%= link_to "Back to stories", admin_stories_path %>
 </div>
