--- a/app/views/admin/stories/index.html.erb
+++ b/app/views/admin/stories/index.html.erb
@@ -2,7 +2,7 @@
 
 <% content_for :title, "Stories" %>
 
-<h1>Модерировать все истории</h1>
+<h1>Все истории</h1>
 
 <%# <div class="A_Button"> %>
   <%#= link_to "Создать новую историю", new_admin_story_path %>
