--- a/app/views/application/_menubar.html.erb
+++ b/app/views/application/_menubar.html.erb
@@ -9,7 +9,13 @@
         <%else%>
              <%= link_to "Истории", admin_stories_url %>
         <%end%>
-        <%= link_to "Все главы", admin_chapters_path%>
+
+        <% if user_signed_in? && current_user.admin? %>
+             <%= link_to "Модерировать все главы", admin_chapters_path%>
+        <%else%>
+             <%= link_to "Все главы", admin_chapters_path%>
+        <%end%>
+       
 
 
     </div>
