email sub forms

--- a/app/views/admin/stories/_story.html.erb
+++ b/app/views/admin/stories/_story.html.erb
@@ -3,6 +3,7 @@
 
   <div class="M_Story">
     <div class="A_StoryContent">
+      <%= story.user.email%>
       <p class="Q_Name">
         <%= story.title %>
       </p>
