--- a/app/assets/stylesheets/basics.css
+++ b/app/assets/stylesheets/basics.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "ONYOone";
+    font-family: "Gilroy";
     size: 22px;
     margin: 60px;
 }
@@ -8,6 +8,10 @@ a {
     font: "ONYOone";
     text-decoration: none;
     color: black;
+}
+
+input {
+  all: unset;
 }
 
 h1 {
@@ -41,8 +45,24 @@ img {
 }
 
 .M_Menubar_Promo {
+    width: 100%;
+    margin: 0 0 60px;
+    display: inline-flex;
+    justify-content: space-between;
+    align-items: center;
+    font: "Gilroy";
+    font-size: 22px;
     color: #F8F6F0;
+
+    .A_MainLinks {
+      a {
+        color: #F8F6F0;
+      }
+
+    }
 }
+
+
 .Subhead{
     margin: 50px 96px 0;
     position: absolute;
@@ -173,6 +193,34 @@ img {
     /* bottom: 00px; */
     right: 320px;
     position: absolute;
+}
+
+
+.SubFormInner {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 20px;
+}
+
+
+.SubForm {
+  margin: 530px 400px 0px;
+  position: absolute;
+
+}
+
+.A_Mailfield {
+  background-color: #F8F6F0;
+  padding: 20px 300px 20px 20px;
+  border-radius: 40px;
+}
+
+.A_SubmButton {
+  background-color: #08090A;
+  color: #F8F6F0;
+  padding: 20px;
+  border-radius: 40px;
 }
 
 
