added comment in routes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
   <body>
   <%# сюда прыгает рендер менюшки %>
 
-    <%#= render "application/menubar" %>
+    <%= render "application/menubar" %>
 
     <%# подключим аутентиф здесь чтобы рендерилос везде %>
 
